--- a/package.json
+++ b/package.json
@@ -6,20 +6,38 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "stripe:listen": "stripe listen --forward-to=localhost:3000/api/webhooks --project-name=fss-calendar"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.6",
+    "@prisma/client": "^4.14.1",
+    "@stripe/stripe-js": "^1.48.0",
+    "@supabase/auth-helpers-nextjs": "^0.5.4",
+    "@supabase/auth-helpers-react": "^0.3.1",
+    "@supabase/auth-ui-react": "^0.3.3",
+    "@supabase/auth-ui-shared": "^0.1.2",
+    "@supabase/supabase-js": "^2.10.0",
     "@types/node": "20.2.0",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "classnames": "^2.3.2",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "next": "13.4.2",
+    "next-auth": "^4.22.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
+    "react-merge-refs": "^2.0.1",
+    "stripe": "^11.13.0",
+    "swr": "^2.0.4",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "prisma": "^4.14.1",
+    "supabase": "^1.61.4"
   }
 }
